
When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.

* [2026-02-26 Thu]
** Fixed
*** Help/Sample modal for authenticated users
    - Fixed an issue where clicking the question-mark help icon could show an empty Sample screen or get stuck on =Syncing ...=
    - PR: https://github.com/200ok-ch/organice/pull/1106
** Added
*** Auto-continue lists with checkboxes in description editor
    - When pressing Enter in an (unordered) checkbox list, the list
      will be continued with a checkbox
    - The new line has a checkbox with the same checked state as the
      previous one (unchecked, checked, partially checked).

    See [[https://orgmode.org/manual/Checkboxes.html][orgmode manual]] for more information on checkboxes.

* [2026-02-12 Thu]

** Changed

*** Migrated search parser from pegjs to peggy
    - pegjs is end of life (last commit 7+ years ago); peggy is the maintained fork
    - PR: https://github.com/200ok-ch/organice/pull/1101

** Added

*** Auto-continue lists in description editor
    - When editing a header description, pressing Enter after a list item (=- item= or =1. item=) automatically starts the next list item
    - Ordered lists increment the number (=1.= → =2.= → =3.=)
    - Pressing Enter on an empty list prefix removes it, exiting the list
    - Works with both dash (=-=) and plus (=+=) unordered lists, and dot (=1.=) and paren (=1)=) ordered lists

* [2026-02-11 Wed]

** Added

*** Harmonize modals for managing headers
    - For capture templates, the '+' button or editing a header, now all modals have the same functionality
    - Removes the old TitleEditorModal and DescriptionEditorModal components
    - PR: https://github.com/200ok-ch/organice/pull/1099

* [2026-02-10 Mon]

** Fixed

*** Theme/color scheme flash on startup
    - Fixed a bug where the app would briefly show dark mode before switching to the configured light mode